# dvd-jepa

./: .gitignore  README.md  SHARE.md  pyproject.toml  requirements.txt
assets/: metrics.json
checkpoints/: dvd_jepa.pt
dvd_jepa/: __init__.py  models.py  train.py  world.py
notebooks/: dvd_jepa.ipynb
paper/: SUBMISSION.md  build_arxiv.sh  figures.py  main.tex  metrics.tex
scripts/: pure_jepa.py
web/: index.html  jepa.js  weights.json
